<resources>
    <string name="app_name">FitAppBix</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="neck">Neck</string>
    <string name="waist">Waist</string>
    <string name="hip">Hip</string>
    <string name="height">Height</string>
    <string name="calculate">Calculate</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
</resources>
